--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,408 @@
-/* место для вашего кода */
+body {
+  background-color: white;
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  height: 293px;
+  padding: 92px 50px 96px;
+}
+
+.header_menu {
+  width: 392px;
+  height: 22px;
+}
+
+.header_links-list {
+  display: flex;
+  gap: 33px;
+  list-style: circle;
+}
+
+.header_links-list-item {
+  font-family: Raleway;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 18px;
+  line-height: 100%;
+}
+
+.header__links-list-item_no-bullit {
+  list-style-type: none;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header_logo-image {
+  display: block;
+  margin: auto;
+  width: 134px;
+  height: 115px;
+}
+
+.address {
+  display: flex;
+  flex-direction: column;
+}
+
+.header_address {
+  align-self: flex-end;
+  max-width: 240px;
+  justify-self: end;
+  font-family: Raleway;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 18px;
+  line-height: 24.3px;
+  letter-spacing: 0%;
+}
+
+/* ниже код блока section - cover - h1 */
+
+.cover {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-image: url(../images/cover.jpg);
+  background-size: 1100px 757px;
+  min-height: 757px;
+  position: relative;
+}
+
+.overlay {
+  position: absolute;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  z-index: 1;
+}
+
+.cover-title {
+  color: white;
+  font-family: Raleway;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 100px;
+  line-height: 115%;
+  text-transform: uppercase;
+  text-align: center;
+  width: 1000px;
+  height: 385px;
+}
+
+.aligned-text {
+  display: block;
+  width: 1000px;
+  min-height: 385px;
+  margin-left: 50px;
+}
+
+.letter-spacing-extened {
+  letter-spacing: 31px;
+}
+
+.aligned-text_left {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.aligned-text_center {
+  display: flex;
+  margin: 20px 0px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.aligned-text_right {
+  display: flex;
+  justify-self: end;
+  text-align: right;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.cover-title,
+.cover__description {
+  position: relative;
+  z-index: 1;
+}
+
+/* ниже код блока section - cover - button */
+
+.cover__description {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 50px;
+  width: 1000;
+  height: 51;
+  top: 106px;
+  margin: 0;
+}
+
+.cover__description-text {
+  font-family: Raleway;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 22px;
+  line-height: 28px;
+  text-transform: uppercase;
+  color: #fff;
+  word-spacing: 19px;
+}
+
+.bet-button {
+  border: 1px solid #fff;
+  width: 256px;
+  height: 51px;
+  background-color: transparent;
+  color: white;
+  font-family: Raleway;
+  font-weight: 500;
+  font-style: Medium;
+  font-size: 22px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+/* ниже код блока lots */
+
+.lots {
+  display: flex;
+  flex-direction: column;
+  margin: 184px 24px 120px;
+  padding: 0;
+}
+
+.lots__heading {
+  font-family: Raleway;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 40px;
+  line-height: 100%;
+  text-transform: uppercase;
+  width: 121px;
+  height: 47px;
+  margin-left: 40px;
+  margin-bottom: 22px;
+}
+
+.lots__card-list {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.lots__card-list-item {
+  max-width: 334px;
+  min-height: 596px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.card,
+.card__text {
+  position: relative;
+  z-index: 2;
+}
+
+.card {
+  font-family: Raleway;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 22px;
+  line-height: 120%;
+  letter-spacing: 0%;
+  text-transform: uppercase;
+  text-decoration: underline;
+  text-decoration-style: solid;
+  width: 254px;
+  margin: 0px 40px;
+  margin-top: 49px;
+  height: 110px;
+}
+
+.card__text {
+  font-family: Raleway;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 20px;
+  line-height: 120%;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+.card__text_film {
+  margin-top: 248px;
+}
+
+.card__text_book {
+  margin-top: 30px;
+}
+
+.card__text_picture {
+  margin-top: 126px;
+}
+
+.lots__look-more-link {
+  display: block;
+  text-align: center;
+  width: 192px;
+  height: 23px;
+  margin-top: 35px;
+  margin-left: 40px;
+  font-family: Raleway;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 20px;
+  line-height: 100%;
+}
+
+.card__link {
+  position: relative;
+}
+
+.card_type_film {
+  color: white;
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  color: white;
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  color: white;
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+/* ниже код блока about */
+
+.about {
+  display: grid;
+  grid-template-columns: 334px auto;
+  margin: 0px 24px 180px;
+  min-height: 595px;
+}
+
+.about__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%;
+  margin-top: 35px;
+  margin-left: 47px;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__column {
+  padding-top: 133px;
+  padding-left: 27px;
+}
+
+.about__title {
+  font-family: Raleway;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 40px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-transform: uppercase;
+}
+
+.about__text {
+  display: flex;
+  flex-direction: column;
+  margin-top: 105px;
+  gap: 24px;
+  font-family: Raleway;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 20px;
+  line-height: 24px;
+  width: 693px;
+  height: 312px;
+}
+
+.about__text-first-paragraph {
+  width: 688px;
+}
+
+.about__text-second-paragraph {
+  width: 693px;
+}
+
+/* внизу код для footer */
+
+.footer {
+  height: 180px;
+  display: grid;
+  justify-items: center;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.address__position {
+  width: 265px;
+  height: 98px;
+  font-family: Raleway;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 18px;
+  line-height: 24.3px;
+}
+
+.footer__menu {
+  text-align: center;
+}
+
+.footer__menu-link {
+  font-family: Raleway;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 18px;
+  text-align: center;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-content: flex-end;
+  width: 266px;
+  height: 48px;
+  gap: 48px;
+}
+
+.footer__menu-list,
+.footer__social-list {
+  list-style-type: none;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
