--- a/styles/style.css
+++ b/styles/style.css
@@ -1,30 +1,23 @@
-body {
-  background-color: white;
-}
-
 .header {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  height: 293px;
   padding: 92px 50px 96px;
 }
 
-.header_menu {
-  width: 392px;
-  height: 22px;
+.header__menu {
+  padding-right: 41px;
 }
 
-.header_links-list {
+.header__links-list {
   display: flex;
   gap: 33px;
   list-style: circle;
 }
 
-.header_links-list-item {
-  font-family: Raleway;
+.header__links-list-item {
+  font-family: Raleway, Arial, sans-serif;
   font-weight: 400;
-  font-style: Regular;
   font-size: 18px;
   line-height: 100%;
 }
@@ -33,32 +26,42 @@ body {
   list-style-type: none;
 }
 
+.header__link {
+  text-decoration: none;
+  border-bottom: 1px solid #000;
+}
+
 .header__link_active {
   text-decoration: none;
 }
 
-.header_logo-image {
+.header__logo-image {
   display: block;
   margin: auto;
   width: 134px;
-  height: 115px;
+  height: 105px;
 }
 
 .address {
   display: flex;
   flex-direction: column;
+  font-family: Raleway, Arial, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24.3px;
+  font-style: normal;
 }
 
-.header_address {
+.header__address {
   align-self: flex-end;
   max-width: 240px;
   justify-self: end;
-  font-family: Raleway;
-  font-weight: 400;
-  font-style: Regular;
-  font-size: 18px;
-  line-height: 24.3px;
-  letter-spacing: 0%;
+  font-style: normal;
+}
+
+.header__address-link_active {
+  text-decoration: none;
+  border-bottom: 1px solid #000;
 }
 
 /* ниже код блока section - cover - h1 */
@@ -66,9 +69,8 @@ body {
 .cover {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   background-image: url(../images/cover.jpg);
-  background-size: 1100px 757px;
+  background-size: cover;
   min-height: 757px;
   position: relative;
 }
@@ -78,28 +80,28 @@ body {
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.6);
   color: white;
   z-index: 1;
 }
 
-.cover-title {
+.cover__title {
   color: white;
-  font-family: Raleway;
+  font-family: Raleway, Arial, sans-serif;
   font-weight: 700;
-  font-style: Bold;
   font-size: 100px;
   line-height: 115%;
   text-transform: uppercase;
   text-align: center;
   width: 1000px;
-  height: 385px;
+  min-height: 385px;
+  margin-top: 165px;
 }
 
 .aligned-text {
-  display: block;
   width: 1000px;
-  min-height: 385px;
   margin-left: 50px;
 }
 
@@ -107,13 +109,17 @@ body {
   letter-spacing: 31px;
 }
 
-.aligned-text_left {
+.aligned-text_left,
+.aligned-text_center,
+.aligned-text_right {
   display: flex;
+}
+
+.aligned-text_left {
   justify-content: flex-start;
 }
 
 .aligned-text_center {
-  display: flex;
   margin: 20px 0px;
   justify-content: center;
   align-items: center;
@@ -121,7 +127,6 @@ body {
 }
 
 .aligned-text_right {
-  display: flex;
   justify-self: end;
   text-align: right;
 }
@@ -130,7 +135,7 @@ body {
   letter-spacing: 0;
 }
 
-.cover-title,
+.cover__title,
 .cover__description {
   position: relative;
   z-index: 1;
@@ -143,17 +148,13 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 50px;
-  width: 1000;
-  height: 51;
-  top: 106px;
-  margin: 0;
+  padding: 0 50px;
+  margin-top: 106px;
 }
 
 .cover__description-text {
-  font-family: Raleway;
+  font-family: Raleway, Arial, sans-serif;
   font-weight: 400;
-  font-style: Regular;
   font-size: 22px;
   line-height: 28px;
   text-transform: uppercase;
@@ -167,9 +168,8 @@ body {
   height: 51px;
   background-color: transparent;
   color: white;
-  font-family: Raleway;
+  font-family: Raleway, Arial, sans-serif;
   font-weight: 500;
-  font-style: Medium;
   font-size: 22px;
   text-align: center;
   text-transform: uppercase;
@@ -180,31 +180,32 @@ body {
 .lots {
   display: flex;
   flex-direction: column;
-  margin: 184px 24px 120px;
+  margin: 180px 24px 120px;
   padding: 0;
 }
 
 .lots__heading {
-  font-family: Raleway;
+  font-family: Raleway, Arial, sans-serif;
   font-weight: 700;
-  font-style: Bold;
   font-size: 40px;
   line-height: 100%;
-  text-transform: uppercase;
-  width: 121px;
-  height: 47px;
+  min-height: 47px;
   margin-left: 40px;
-  margin-bottom: 22px;
+  margin-bottom: 27px;
+  text-transform: uppercase;
 }
 
 .lots__card-list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   gap: 20px;
+  height: 100%;
+  list-style-type: none;
 }
 
 .lots__card-list-item {
-  max-width: 334px;
+  width: 334px;
   min-height: 596px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -212,82 +213,82 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
+  color: white;
 }
 
-.card,
-.card__text {
-  position: relative;
-  z-index: 2;
+.lots__card-list-item a {
+  text-decoration: none;
 }
 
 .card {
-  font-family: Raleway;
+  position: relative;
+  z-index: 2;
+  text-decoration: none;
+}
+
+.card__title {
+  font-family: Raleway, Arial, sans-serif;
   font-weight: 700;
-  font-style: Bold;
   font-size: 22px;
   line-height: 120%;
-  letter-spacing: 0%;
   text-transform: uppercase;
   text-decoration: underline;
-  text-decoration-style: solid;
   width: 254px;
   margin: 0px 40px;
   margin-top: 49px;
-  height: 110px;
 }
 
 .card__text {
-  font-family: Raleway;
+  font-family: Raleway, Arial, sans-serif;
   font-weight: 400;
-  font-style: Regular;
   font-size: 20px;
   line-height: 120%;
   margin-left: 40px;
   margin-right: 40px;
+  height: 100%;
+  text-decoration: none;
 }
 
 .card__text_film {
-  margin-top: 248px;
+  padding-top: 274px;
 }
 
 .card__text_book {
-  margin-top: 30px;
+  padding-top: 30px;
 }
 
 .card__text_picture {
-  margin-top: 126px;
+  padding-top: 126px;
 }
 
 .lots__look-more-link {
-  display: block;
-  text-align: center;
-  width: 192px;
-  height: 23px;
-  margin-top: 35px;
+  display: inline-block;
+  text-align: left;
+  padding-top: 3px;
+  margin-top: 30px;
   margin-left: 40px;
-  font-family: Raleway;
+  font-family: Raleway, Arial, sans-serif;
   font-weight: 400;
-  font-style: Regular;
   font-size: 20px;
   line-height: 100%;
 }
 
 .card__link {
   position: relative;
+  height: 100%;
+  list-style-type: none;
+  text-decoration: none;
 }
 
 .card_type_film {
-  color: white;
   background-image: url(../images/card-lot-01.jpg);
 }
 
 .card_type_book {
-  color: white;
   background-image: url(../images/card-lot-02.jpg);
 }
 
 .card_type_picture {
-  color: white;
   background-image: url(../images/card-lot-03.jpg);
 }
 
@@ -297,7 +298,7 @@ body {
   display: grid;
   grid-template-columns: 334px auto;
   margin: 0px 24px 180px;
-  min-height: 595px;
+  margin-top: 10px;
 }
 
 .about__logo {
@@ -318,71 +319,63 @@ body {
 }
 
 .about__column {
-  padding-top: 133px;
+  padding-top: 143px;
   padding-left: 27px;
 }
 
 .about__title {
-  font-family: Raleway;
+  font-family: Raleway, Arial, sans-serif;
   font-weight: 700;
-  font-style: Bold;
   font-size: 40px;
   line-height: 100%;
-  letter-spacing: 0%;
   text-transform: uppercase;
 }
 
 .about__text {
   display: flex;
   flex-direction: column;
-  margin-top: 105px;
+  padding-top: 100px;
   gap: 24px;
-  font-family: Raleway;
+  font-family: Raleway, Arial, sans-serif;
   font-weight: 400;
-  font-style: Regular;
   font-size: 20px;
   line-height: 24px;
   width: 693px;
-  height: 312px;
 }
 
-.about__text-first-paragraph {
+.about__text_paragraph {
   width: 688px;
-}
-
-.about__text-second-paragraph {
-  width: 693px;
 }
 
 /* внизу код для footer */
 
 .footer {
-  height: 180px;
   display: grid;
   justify-items: center;
   grid-template-columns: repeat(3, 1fr);
 }
 
-.address__position {
+.footer__address {
   width: 265px;
-  height: 98px;
-  font-family: Raleway;
-  font-weight: 400;
-  font-style: Regular;
-  font-size: 18px;
-  line-height: 24.3px;
+  padding-bottom: 80px;
+}
+
+.footer__address-link_active {
+  text-decoration: underline;
+  text-underline-offset: 5px;
 }
 
 .footer__menu {
   text-align: center;
+  font-family: Raleway, Arial, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  text-align: center;
 }
 
 .footer__menu-link {
-  font-family: Raleway;
-  font-weight: 400;
-  font-style: Regular;
-  font-size: 18px;
-  text-align: center;
+  text-decoration: none;
+  border-bottom: 1px solid #000;
 }
 
 .footer__menu-link_active {
@@ -392,9 +385,9 @@ body {
 .footer__social-list {
   display: flex;
   justify-content: flex-end;
-  width: 266px;
-  height: 48px;
   gap: 48px;
+  padding-left: 28px;
+  padding-bottom: 132px;
 }
 
 .footer__menu-list,
