--- a/styles/style.css
+++ b/styles/style.css
@@ -56,12 +56,11 @@
   align-self: flex-end;
   max-width: 240px;
   justify-self: end;
-  font-style: normal;
 }
 
-.header__address-link_active {
-  text-decoration: none;
-  border-bottom: 1px solid #000;
+.address__link_active {
+  text-decoration: underline;
+  text-underline-offset: 5px;
 }
 
 /* ниже код блока section - cover - h1 */
@@ -96,7 +95,6 @@
   text-transform: uppercase;
   text-align: center;
   width: 1000px;
-  min-height: 385px;
   margin-top: 165px;
 }
 
@@ -189,9 +187,8 @@
   font-weight: 700;
   font-size: 40px;
   line-height: 100%;
-  min-height: 47px;
   margin-left: 40px;
-  margin-bottom: 27px;
+  padding-bottom: 34px;
   text-transform: uppercase;
 }
 
@@ -205,25 +202,45 @@
 }
 
 .lots__card-list-item {
-  width: 334px;
-  min-height: 596px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  color: white;
 }
 
 .lots__card-list-item a {
   text-decoration: none;
 }
 
-.card {
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.card-link {
+  width: 334px;
+  min-height: 596px;
   position: relative;
-  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  color: white;
+  list-style-type: none;
   text-decoration: none;
+}
+
+.card {
+  z-index: 2;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card__title {
@@ -245,20 +262,8 @@
   line-height: 120%;
   margin-left: 40px;
   margin-right: 40px;
-  height: 100%;
   text-decoration: none;
-}
-
-.card__text_film {
-  padding-top: 274px;
-}
-
-.card__text_book {
-  padding-top: 30px;
-}
-
-.card__text_picture {
-  padding-top: 126px;
+  padding-bottom: 48px;
 }
 
 .lots__look-more-link {
@@ -271,25 +276,6 @@
   font-weight: 400;
   font-size: 20px;
   line-height: 100%;
-}
-
-.card__link {
-  position: relative;
-  height: 100%;
-  list-style-type: none;
-  text-decoration: none;
-}
-
-.card_type_film {
-  background-image: url(../images/card-lot-01.jpg);
-}
-
-.card_type_book {
-  background-image: url(../images/card-lot-02.jpg);
-}
-
-.card_type_picture {
-  background-image: url(../images/card-lot-03.jpg);
 }
 
 /* ниже код блока about */
@@ -358,11 +344,6 @@
 .footer__address {
   width: 265px;
   padding-bottom: 80px;
-}
-
-.footer__address-link_active {
-  text-decoration: underline;
-  text-underline-offset: 5px;
 }
 
 .footer__menu {
